# osmf_aac_resampler

./: AUTHORS  Makefile.in  README  README.md  configure  configure.ac  generate
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
contrib/: 1.aac
src/: AACDecompress.cpp  AACDecompress.h  AACResampler.abc  AACResampler.as3  AACResampler.swc  AACResampler_wrapper.c  AS3main.cpp  AudioResampler.cpp  AudioResampler.h  Makefile.am  Makefile.crossbridge  Makefile.in  aac_resampler.i  exports.txt  main.cpp
